--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,48 +1,9 @@
-html,
-body,
-material-app,
-md-sidenav-container,
-.main-content-wrapper {
-  width: 100%;
-  height: 100%;
-}
-
-.mat-sidenav {
-  width: 25vw;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.main-content {
-  width: 100%;
-  height: 80%;
-
-
-  .main-page-content {
-    height:100%;
-    display:flex;
-    .row {
-      display: flex;
-      height: 100%;
-      .col1 {
-        margin: auto;
-        display: flex;
-        align-items: flex-end;
-        flex-direction: row-reverse;
-        img {
-        }
-      }
-      .col2 {
-        margin: auto;
-        padding-left: 3vw;
-        padding-right: 4vw;
-      }
-    }
+.mat-drawer-container {
+  .mat-drawer {
+    width: 300px;
   }
 
-
+  [drawer-content] {
+    height: calc(100vh - 64px);
+  }
 }
