chore(optimize): http.get; added learn more dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <span class="ml-3">One Piece API</span>
     </mat-toolbar>
 
-    <div drawer-content>
+    <div drawer-content data-scrollbar>
       <router-outlet></router-outlet>
     </div>
   </div>
