--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="onScroll()" [scrollWindow]="false">
-  <div class="container">
+  <div class="container" data-scrollbar>
     <div class="row">
       <div class="col-12">
 
@@ -9,7 +9,7 @@
               <button mat-raised-button (click)="loadAutocomplete()" [disabled]="isDisabled" class="mt-3">LOAD AUTOCOMPLETE</button>
             </div>
             <div *ngIf="!isLoadAutocomplete">
-              <mat-progress-spinner mode="indeterminate" [color]="'warn'" class="mt-3" *ngIf="isShowAutocomplete !== 1"></mat-progress-spinner>
+              <mat-progress-spinner mode="indeterminate" [color]="'warn'" class="mt-3" *ngIf="isShowAutocomplete !== 1 "></mat-progress-spinner>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
                 <p>{{ pirate?.attributes?.name }}</p>
               </mat-card-content>
               <mat-card-actions class="d-flex">
-                <button mat-raised-button class="ml-auto">LEARN MORE</button>
+                <button mat-raised-button class="ml-auto" (click)="onDialog(pirate)">LEARN MORE</button>
               </mat-card-actions>
             </mat-card>
 
