--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         <div class="d-flex">
           <div class="m-auto">
             <div *ngIf="isLoadAutocomplete">
-              <button mat-raised-button (click)="loadAutocomplete()" [disabled]="isDisabled" class="mt-3">LOAD AUTOCOMPLETE</button>
+              <button mat-raised-button (click)="loadAutocomplete()" [disabled]="isDisabled" class="mt-4">LOAD AUTOCOMPLETE</button>
             </div>
             <div *ngIf="!isLoadAutocomplete">
               <mat-progress-spinner mode="indeterminate" [color]="'warn'" class="mt-3" *ngIf="isShowAutocomplete !== 1 "></mat-progress-spinner>
@@ -21,16 +21,20 @@
       </div>
       <div class="col-12" data-card>
         <div class="row">
-          <div class="col-3" *ngFor="let pirate of pirates">
+          <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12" *ngFor="let pirate of pirates">
 
-            <mat-card class="mb-4">
-              <img mat-card-image data-img src="{{ pirate?.attributes?.image?.original }}">
-              <mat-card-content>
-                <p>{{ pirate?.attributes?.name }}</p>
-              </mat-card-content>
-              <mat-card-actions class="d-flex">
-                <button mat-raised-button class="ml-auto" (click)="onDialog(pirate)">LEARN MORE</button>
-              </mat-card-actions>
+            <mat-card class="mb-5 ml-auto mr-auto">
+              <div data-img>
+                <img mat-card-image src="{{ pirate?.attributes?.image?.original }}" alt="{{ pirate?.attributes?.name }}">
+              </div>
+              <div data-content>
+                <mat-card-content>
+                  <p>{{ pirate?.attributes?.name }}</p>
+                </mat-card-content>
+                <mat-card-actions class="d-flex">
+                  <button mat-raised-button class="ml-auto" (click)="onDialog(pirate)">LEARN MORE</button>
+                </mat-card-actions>
+              </div>
             </mat-card>
 
           </div>
