--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,14 +4,38 @@
 
   [data-card] {
     margin-top: 25px;
+
+    .mat-card {
+      position: relative;
+      z-index: 0;
+      width: 221.031px;
+      height: 350px;
+      [data-img] {
+        position: absolute;
+        z-index: -3;
+        .mat-card-image {
+          height: 350px;
+        }
+      }
+      [data-content] {
+        z-index: 10;
+        margin-top: 230px;
+        .mat-card-content {
+          z-index: 10;
+          font-size: 1.2em;
+          font-weight: bold;
+          color: #131313;
+          text-shadow:
+            1px -1px 0 #767676,
+            -1px 2px 1px #737272,
+            -2px 4px 1px #767474,
+        }
+        .mat-card-actions {
+          z-index: 10;
+        }
+      }
+
+    }
   }
 
-  [data-img] {
-    length: 100%;
-    width: 207px + 48px;
-  }
-
-  .mat-card-content {
-    font-size: 1.2em;
-  }
 }
