--- a/src/app/common/shared/components/learn-more-dialog/other-media/other-media.component.html
+++ b/src/app/common/shared/components/learn-more-dialog/other-media/other-media.component.html
@@ -21,7 +21,7 @@
 <button mat-raised-button *ngIf="isMovie" (click)="showType = 'movie'">MOVIE</button>
 <button mat-raised-button *ngIf="isSpacial" (click)="showType = 'special'">SPECIALS</button>
 <button mat-raised-button *ngIf="isOva" (click)="showType = 'OVA'">OVA</button>
-<button mat-raised-button *ngIf="isTv" (click)="showType = 'TV'">TV</button>\
+<button mat-raised-button *ngIf="isTv" (click)="showType = 'TV'">TV</button>
 
 <h5 *ngIf="isShowContent"><br>No published media content found.</h5>
 
