--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
               <button mat-raised-button (click)="loadAutocomplete()" [disabled]="isDisabled" class="mt-4">LOAD AUTOCOMPLETE</button>
             </div>
             <div *ngIf="!isLoadAutocomplete">
-              <mat-progress-spinner mode="indeterminate" [color]="'warn'" class="mt-3" *ngIf="isShowAutocomplete !== 1 "></mat-progress-spinner>
+              <mat-progress-spinner mode="indeterminate" [color]="'warn'" class="mt-3" *ngIf="isShowAutocomplete !== 1 && isShowAutocomplete < 1"></mat-progress-spinner>
             </div>
           </div>
         </div>
