fix: mobile platforms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </mat-drawer>
 
   <div>
-    <mat-toolbar class="d-flex">
+    <mat-toolbar class="d-flex" [ngStyle]="{ 'height': '64px' }">
       <button mat-icon-button (click)="start.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
