--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -22,13 +22,17 @@
         margin-top: 230px;
         .mat-card-content {
           z-index: 10;
-          font-size: 1.2em;
-          font-weight: bold;
-          color: #131313;
+          font: bold 1.2em Sans-Serif;
+          color: #202c2d;
           text-shadow:
-            1px -1px 0 #767676,
-            -1px 2px 1px #737272,
-            -2px 4px 1px #767474,
+            0 1px #808d93,
+            -1px 0 #cdd2d5,
+            -1px 2px #808d93,
+            -2px 1px #cdd2d5,
+            -2px 3px #808d93,
+            -3px 2px #cdd2d5,
+            -3px 4px #808d93,
+            -4px 3px #cdd2d5;
         }
         .mat-card-actions {
           z-index: 10;
