--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
   </mat-toolbar>
 
-  <div id="content">
+  <div id="content" data-scrollbar>
     <div class="wrap">
 
       <router-outlet></router-outlet>
