--- a/src/app/pirates/pirates.component.html
+++ b/src/app/pirates/pirates.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
 
-  <mat-card *ngFor="let pirate of pirates | async">
+  <mat-card *ngFor="let pirate of pirates">
     <mat-card-content>
       <div id="shadow">
         <p>{{ pirate?.attributes?.names?.en }}</p>
