--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,6 +1,12 @@
 <mat-form-field color="accent">
-  <mat-label>Search your pirate</mat-label>
+  <mat-label>Search your favorite pirate</mat-label>
   <input matInput [matAutocomplete]="reactiveAuto" [formControl]="pirateCtrl">
+  <mat-autocomplete #reactiveAuto="matAutocomplete" [displayWith]="displayFn">
+    <mat-option *ngFor="let pirate of reactivePirates | async" [value]="pirate?.attributes?.names?.en">
+      <span>{{ pirate?.attributes?.names?.en }}</span>
+      <span class="demo-secondary-text" *ngIf="pirate?.attributes?.names?.ja_jp"> ({{pirate?.attributes?.names?.ja_jp}}) </span>
+    </mat-option>
+  </mat-autocomplete>
 </mat-form-field>
 
 <router-outlet></router-outlet>
