--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -9,7 +9,8 @@
 
 // STYLE CONFIGURATIONS
 @import '~bootstrap/scss/bootstrap.scss';
-
+@import '~simplebar/dist/simplebar.css';
+@import '~animate.css/animate.min.css';
 
 // EXTERNAL STYLES
 
