--- a/src/app/pirates/pirates.component.scss
+++ b/src/app/pirates/pirates.component.scss
@@ -1,15 +1,18 @@
 #wrapper {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  // margin-bottom: 100px;
-  > .mat-card:hover {
+  > div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    // margin-bottom: 100px;
+  }
+
+  > div > .mat-card:hover {
     #shadow {
       z-index: 2;
     }
   }
 
-  > .mat-card {
+  > div > .mat-card {
     width: 225px;
     height: 350px;
     margin-bottom: 50px;
