--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -17,7 +17,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: lighter;
 }
 
-*:focus, button:focus {
+*:focus, 
+button:focus, 
+.mat-icon-button:focus {
   outline: none;
 }
 
